--- a/pages/login.html
+++ b/pages/login.html
@@ -26,7 +26,7 @@
     </main>
     <div class="modal_preencha">
         <h1>Campo vazio</h1>
-        <p>Preencha os campos para prosseguir</p>
+        <p class="modal_preencha_p">Os dados nao estao preenchidos ou os campos estao invalidos, caso nao tenha uma conta cria uma <a href="cadastro.html">aqui</a></p>
         <img src="../assets/Vector.png" alt="" class="btn_preencha_x pointer">
     </div>  
     <div class="filter">
