--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -26,7 +26,7 @@
     </main>
     <div class="modal_preencha">
         <h1>Campo vazio</h1>
-        <p>Preencha os campos para criar uma conta </p>
+        <p>Os campos estao vazios ou a conta ja existe</p>
         <img src="../assets/Vector.png" alt="" class="btn_preencha_x">
     </div>  
     <div class="filter">
