--- a/pages/home.html
+++ b/pages/home.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../styles/home.css">
     <link rel="stylesheet" href="../styles/modal_add.css">
     <link rel="stylesheet" href="../styles/modal_remove.css">
+    <link rel="stylesheet" href="../styles/modalEditar.css">
 </head>
 <body>
     <header class="menu">
@@ -25,41 +26,7 @@
                 <h1>Email</h1>
                 <h1>Telefone</h1>
             </div>
-            <div class="cont_template">
-                <p class="template_nome">Claudia M. Sousa</p>
-                <p class="template_email">claudia@teste.com.br</p>
-                <p class="template_telefone">(99)9999-9999</p>
-                <button class="btn_delete"></button>
-            </div>
-            <div class="cont_template">
-                <p class="template_nome">Claudia M. Sousa</p>
-                <p class="template_email">claudia@teste.com.br</p>
-                <p class="template_telefone">(99)9999-9999</p>
-                <button class="btn_delete"></button>
-            </div>
-            <div class="cont_template">
-                <p class="template_nome">Claudia M. Sousa</p>
-                <p class="template_email">claudia@teste.com.br</p>
-                <p class="template_telefone">(99)9999-9999</p>
-                <button class="btn_delete"></button>
-            </div>
-            <div class="cont_template">
-                <p class="template_nome">Claudia M. Sousa</p>
-                <p class="template_email">claudia@teste.com.br</p>
-                <p class="template_telefone">(99)9999-9999</p>
-                <button class="btn_delete"></button>
-            </div>
-            <div class="cont_template">
-                <p class="template_nome">Claudia M. Sousa</p>
-                <p class="template_email">claudia@teste.com.br</p>
-                <p class="template_telefone">(99)9999-9999</p>
-                <button class="btn_delete"></button>
-            </div>
-            <div class="cont_template">
-                <p class="template_nome">Claudia M. Sousa</p>
-                <p class="template_email">claudia@teste.com.br</p>
-                <p class="template_telefone">(99)9999-9999</p>
-                <button class="btn_delete"></button>
+            <div class="template_principal">
             </div>
         </section>
     </main>
@@ -81,6 +48,18 @@
         <button class="modal_btn_add">ADICIONAR</button>
         <button class="modal_btn_limpar">LIMPAR</button>
         <button class="modal_add_x"></button>
+    </div>
+    <div class="modal_editar">
+        <h1>Novo Contato</h1>
+        <div class="modal_editar_inputs">
+            <input type="text" name="" class="editar-input_nome" id="" placeholder="Nome:">
+            <input type="text" name="" class="editar-input_email" id="" placeholder="Email:">
+            <input type="password" name="" id="" class="editar-input_password" placeholder="Senha:">
+        </div>
+        <span class="error_editar_modal"></span>
+        <button class="modalEditar_btn_add">ADICIONAR</button>
+        <button class="modalEditar_btn_limpar">LIMPAR</button>
+        <button class="modalEditar_add_x"></button>
     </div>
     <div class="filter">
 
