--- a/pages/home.html
+++ b/pages/home.html
@@ -70,6 +70,8 @@
 
     </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<script src="../js/api.js"></script>
 <script src="../js/home.js"></script>
 <script src="../js/adicionar.js"></script>
 </html>
