--- a/pages/home.html
+++ b/pages/home.html
@@ -55,11 +55,11 @@
 
     <div class="modal_editar">
         <h1>Novo Contato</h1>
-        <div class="modal_editar_inputs">
+        <form class="modal_editar_inputs">
             <input type="text" name="" class="editar-input_nome" id="" placeholder="Nome:">
             <input type="text" name="" class="editar-input_email" id="" placeholder="Email:">
             <input type="text" name="" id="" class="editar-input_telefone" placeholder="Telefone:">
-        </div>
+        </form>
         <span class="error_editar_modal"></span>
         <button class="modalEditar_btn_editar">EDITAR</button>
         <button class="modalEditar_btn_limpar">LIMPAR</button>
